fix youtube video overflow

--- a/src/styles/popular/popular-component.scss
+++ b/src/styles/popular/popular-component.scss
@@ -146,6 +146,13 @@
                     width: 100%;
                 }
 
+                .videoWrapper{
+                    iframe{
+                        width: 100%;
+                        height: auto;
+                    }
+                }
+
                 .meta-data {
                     display: flex;
                     justify-content: space-around;
